--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-    "name": "Typescript-Boilerplate",
-    "displayName": "Typescript-Boilerplate"
+    "name": "TypescriptReactNative",
+    "displayName": "Typescript-ReactNative"
 }
